# unlock_sesame_by_nfc

./: .gitignore  README.md  main.py  permission_checker.py  permissions.csv.sample  permissions.json.sample  pyproject.toml  sesame_api.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
conf/supervisor/: unlock_sesame_by_nfc.conf
