[tool.poetry]
name = "unlock_sesame_by_nfc"
version = "0.1.0"
description = "Unlock Sesame smart key by reading NFC tag"
authors = ["Hiroyuki Shirakawa"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
nfcpy = "^1.0.3"
pysesame2 = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.12.0"
mypy = "^0.761"
rope = "^0.16.0"
pytest = "^5.3.5"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
